# taskcern

./: CMakeLists.txt  README.md
api/: CMakeLists.txt  task.cpp  task.h
c++/: CMakeLists.txt
c++/api/: CMakeLists.txt  taskplus.cpp  taskplus.h
c++/stream/: CMakeLists.txt  functions.cpp  stream.cpp  stream_par.cpp  stream_par_for.cpp
c++/test/: CMakeLists.txt  testplus.cpp
manager/: CMakeLists.txt  taskbackend.cpp  taskbackend.h  taskmanager.cpp  taskmanager.h
test/: CMakeLists.txt  test.c
